--- a/estudos/site1/pagina1/site.html
+++ b/estudos/site1/pagina1/site.html
@@ -32,10 +32,10 @@
      <div id="menubar">
        <ul id="menulist">
         <form>
-          <a href="http://127.0.0.1:5500/pagina1/site.html"> <li class="menuitem" >style 1</li>
-            <a href="http://127.0.0.1:5500/pagina2/page2.html"> <li class="menuitem">style 2</li>
-            <a href="http://127.0.0.1:5500/pagina3/index.html"><li class="menuitem">style 3</li></a>
-            <a href="http://127.0.0.1:5500/pagina4/page4.html"><li class="menuitem">style 4</li></a>
+          <a href="http://127.0.0.1:5500/site/pagina1/site.html"> <li class="menuitem" >style 1</li>
+            <a href="http://127.0.0.1:5500/site/pagina2/page2.html"> <li class="menuitem">style 2</li>
+            <a href="http://127.0.0.1:5500/site/pagina3/index.html"><li class="menuitem">style 3</li></a>
+            <a href="http://127.0.0.1:5500/site/pagina4/page4.html"><li class="menuitem">style 4</li></a>
        </form>
        </ul>
      </div>
