--- a/estudos/site2/loggin/index.html
+++ b/estudos/site2/loggin/index.html
@@ -15,6 +15,6 @@
             <button type="submit">Login</button>
         </form>
     </div>
-    <script src="./api.js"></script>
+    <script src="./api/api.js"></script>
 </body>
 </html>
