--- a/estudos/site2/loggin/index.html
+++ b/estudos/site2/loggin/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="index.css" />
     <title>Login</title>
-</head>
-<body>
+  </head>
+  <body>
     <div>
-        <form id="loginForm">
-            <h1>Login</h1>
-            <input type="text" placeholder="Gmail" id="user" required>
-            <input type="password" placeholder="Password" id="pass" required>
-            <button type="submit">Login</button>
-        </form>
+      <form id="loginForm">
+        <h1>Login</h1>
+        <input type="text" placeholder="Gmail" id="user" required />
+        <input type="password" placeholder="Password" id="pass" required />
+        <button type="submit">Login</button>
+      </form>
     </div>
     <script src="./api/api.js"></script>
-</body>
+  </body>
 </html>
