--- a/estudos/site1/pagina1/site.html
+++ b/estudos/site1/pagina1/site.html
@@ -7,7 +7,7 @@
    </head>
   
    <body>
-  
+  <div id="container">
      <h1>
       bem vindo a minha home page
      </h1>
@@ -39,5 +39,6 @@
          </form>
          </ul>
        </div>
+  </div>
    </body>
   </html>
