--- a/estudos/site1/page4/page4.html
+++ b/estudos/site1/page4/page4.html
@@ -30,7 +30,7 @@
          <div id="menubar">
            <ul id="menulist">
             <form>
-              <a href="./site.html"> <li class="menuitem" >style 1</li>
+              <a href="/estudos/site1/pagina1/site.html"> <li class="menuitem" >style 1</li>
                 <a href="/estudos/site1/pagina2/page2.html"> <li class="menuitem">style 2</li>
                 <a href="/estudos/site1/pagina3/index.html"><li class="menuitem">style 3</li></a>
                 <a href="/estudos/site1/page4/page4.html"><li class="menuitem">style 4</li></a>
