--- a/fazendo coisas no tedio/sitex/index.html
+++ b/fazendo coisas no tedio/sitex/index.html
@@ -7,12 +7,23 @@
   </head>
   <body>
     <div id="container">
-      <div id="l">
-        <form id="menu.bar">
-          <label for="menu.bar">login como professor </label>
-          <label for="menu.bar">login como aluno </label>
-        </form>
-      </div>
+      <header>
+        <nav>
+          <img
+            src="/fazendo coisas no tedio/sitesz/img/onion.jfif"
+            alt="logozinha"
+            width="100px"
+            height="50px"
+          />
+          <a class="logo" href="/">my school</a>
+          <ul class="nav-list">
+            <li><a href="#">Início</a></li>
+            <li><a href="#">Sobre</a></li>
+            <li><a href="#">contatos</a></li>
+            <li><a href="#">login</a></li>
+          </ul>
+        </nav>
+      </header>
     </div>
   </body>
   <script src="./index.js"></script>
