--- a/fazendo coisas no tedio/sitex/index.html
+++ b/fazendo coisas no tedio/sitex/index.html
@@ -9,12 +9,7 @@
     <div id="container">
       <header>
         <nav>
-          <img
-            src="/fazendo coisas no tedio/sitesz/img/onion.jfif"
-            alt="logozinha"
-            width="100px"
-            height="50px"
-          />
+          <img src="/fazendo coisas no tedio/sitesz/img/nikto.png"alt="logozinha"width="100px"height="50px"/>
           <a class="logo" href="/">my school</a>
           <ul class="nav-list">
             <li><a href="#">Início</a></li>
