--- a/fazendo coisas no tedio/sitex/index.html
+++ b/fazendo coisas no tedio/sitex/index.html
@@ -9,7 +9,12 @@
     <div id="container">
       <header>
         <nav>
-          <img src="/fazendo coisas no tedio/sitesz/img/nikto.png"alt="logozinha"width="100px"height="50px"/>
+          <img
+            src="/fazendo coisas no tedio/sitex/img/"
+            alt="logozinha"
+            width="100px"
+            height="50px"
+          />
           <a class="logo" href="/">my school</a>
           <ul class="nav-list">
             <li><a href="#">Início</a></li>
@@ -19,7 +24,31 @@
           </ul>
         </nav>
       </header>
+      <main>
+        <h4>
+          On the other hand, we denounce with righteous indignation and dislike
+          men who are so beguiled and demoralized by the charms of pleasure of
+          the moment, so blinded by desire, that they cannot foresee the pain
+          and trouble that are bound to ensue; and equal blame belongs to those
+          who fail in their duty through weakness of will, which is the same as
+          saying through shrinking from toil and pain. These cases are perfectly
+          simple and easy to distinguish. In a free hour, when our power of
+          choice is untrammelled and when nothing prevents our being able to do
+          what we like best, every pleasure is to be welcomed and every pain
+          avoided. But in certain circumstances and owing to the claims of duty
+          or the obligations of business it will frequently occur that pleasures
+          have to be repudiated and annoyances accepted. The wise man therefore
+          always holds in these matters to this principle of selection: he
+          rejects pleasures to secure other greater pleasures, or else he
+          endures pains to avoid worse pains.
+        </h4>
+        <div id="img">
+          <img src="/fazendo coisas no tedio/sitex/img/muieroxa.png" />
+        </div>
+      </main>
     </div>
   </body>
   <script src="./index.js"></script>
 </html>
+/*esse foi o codigo mais bugado(tanto q n estou conseguindo fazer notas direito
+nele) q eu fiz e mais estressante... pelo menos ta funcionando*/
