--- a/fazendo coisas no tedio/sitex/index.html
+++ b/fazendo coisas no tedio/sitex/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./index.css" />
+    <title>My School</title>
   </head>
   <body>
     <div id="container">
       <header>
         <nav>
           <img
-            src="/fazendo coisas no tedio/sitex/img/"
+            src="/fazendo coisas no tedio/sitex/img/logo.png"
             alt="logozinha"
             width="100px"
             height="50px"
@@ -19,8 +20,8 @@
           <ul class="nav-list">
             <li><a href="#">Início</a></li>
             <li><a href="#">Sobre</a></li>
-            <li><a href="#">contatos</a></li>
-            <li><a href="#">login</a></li>
+            <li><a href="#">Contatos</a></li>
+            <li><a href="#">Login</a></li>
           </ul>
         </nav>
       </header>
@@ -43,12 +44,13 @@
           endures pains to avoid worse pains.
         </h4>
         <div id="img">
-          <img src="/fazendo coisas no tedio/sitex/img/muieroxa.png" />
+          <img
+            src="/fazendo coisas no tedio/sitex/img/muieroxa.png"
+            alt="Image Description"
+          />
         </div>
       </main>
     </div>
+    <script src="./index.js"></script>
   </body>
-  <script src="./index.js"></script>
 </html>
-/*esse foi o codigo mais bugado(tanto q n estou conseguindo fazer notas direito
-nele) q eu fiz e mais estressante... pelo menos ta funcionando*/
