--- a/fazendo coisas no tedio/sitex/index.html
+++ b/fazendo coisas no tedio/sitex/index.html
@@ -10,7 +10,12 @@
     <div id="container">
       <header>
         <nav>
-          <img src="/fazendo coisas no tedio/sitex/img/logo.png" alt="logozinha" width="100px" height="50px" />
+          <img
+            src="/fazendo coisas no tedio/sitex/img/logo.png"
+            alt="logozinha"
+            width="100px"
+            height="50px"
+          />
           <a class="logo" href="/">my school</a>
           <ul class="nav-list">
             <li><a href="#">Início</a></li>
