--- a/projeto/index.html
+++ b/projeto/index.html
@@ -12,7 +12,7 @@
         <input type="text" id="input" placeholder="Type here..." />
         <button type="button" onclick="validate_site()">Submit</button>
       </form>
-      <div class="output" id="output"></div>
+      <div class="output" id="output" placeholder="output"></div>
     </div>
   </body>
   <script src="./requisição.js"></script>
