--- a/projeto/index.html
+++ b/projeto/index.html
@@ -14,6 +14,6 @@
       </form>
       <div class="output" id="output" placeholder="output"></div>
     </div>
+    <script src="requisição.js"></script>
   </body>
-  <script src="./requisição.js"></script>
 </html>
