--- a/projeto/dorkr/dorkr.html
+++ b/projeto/dorkr/dorkr.html
@@ -10,7 +10,7 @@
     <header>
       <nav>
         <ul class="nav_list">
-          <li><a href="./dorker/dorkr.html">Dork Test</a></li>
+          <li><a href="./dorkr/dorkr.html">Dork Test</a></li>
           <li><a href="../index.html">Cloudflare Cookies</a></li>
         </ul>
       </nav>
