--- a/projeto/dorkr/dorkr.html
+++ b/projeto/dorkr/dorkr.html
@@ -11,7 +11,7 @@
       <nav>
         <ul class="nav_list">
           <li><a href="./dorkr/dorkr.html">Dork Test</a></li>
-          <li><a href="../index.html">Cloudflare Cookies</a></li>
+          <li><a href="../cf-cookies-finder.html">Cloudflare Cookies</a></li>
         </ul>
       </nav>
     </header>
