--- a/projeto/dorkr/dorkr.html
+++ b/projeto/dorkr/dorkr.html
@@ -10,8 +10,9 @@
     <header>
       <nav>
         <ul class="nav_list">
-          <li><a href="./dorkr/dorkr.html">Dork Test</a></li>
-          <li><a href="../cf-cookies-finder.html">Cloudflare Cookies</a></li>
+          <li><a href="./dorkr.html">Dork Test</a></li>
+          <li><a href="../cf-finder/cf-cookies-finder.html">Cloudflare Cookies</a></li>
+        <li><a href="../xss-tester/xss.html">xss tester</a></li>
         </ul>
       </nav>
     </header>
