--- a/projeto/cf-finder/cf-cookies-finder.html
+++ b/projeto/cf-finder/cf-cookies-finder.html
@@ -11,14 +11,14 @@
       <nav>
         <ul class="nav_list">
           <li><a href="../dorkr/dorkr.html">Dork Test</a></li>
-          <li><a href="../cf-finder/cf-cookies-finder.html">Cloudflare Cookies</a></li>
+          <li><a href="./cf-cookies-finder.html">Cloudflare Cookies</a></li>
           <li><a href="../xss-tester/xss.html">xss tester</a></li>
         </ul>
       </nav>
     </header>
     <div class="container">
       <form>
-        <input type="text" id="input" placeholder="Type here..." />
+        <input type="text" id="site" placeholder="Type here..." />
         <button type="button" onclick="validate_site()">Submit</button>
       </form>
       <div class="output" id="output" placeholder="output"></div>
