--- a/projeto/xss-tester/xss.html
+++ b/projeto/xss-tester/xss.html
@@ -1,38 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>by pepeeino</title>
+    <title>Teste de XSS</title>
     <link rel="stylesheet" href="xss.css" />
   </head>
   <body>
     <header>
       <nav>
         <ul class="nav_list">
-          <li><a href="../dorkr/dorkr.html">Dork Test</a></li>
+          <li><a href="../dorkr/dorkr.html">Teste de Dorks</a></li>
           <li>
-            <a href="../cf-finder/cf-cookies-finder.html">Cloudflare Cookies</a>
+            <a href="../cf-finder/cf-cookies-finder.html">Cookies Cloudflare</a>
           </li>
-          <li><a href="./xss.html">xss tester</a></li>
+          <li><a href="./xss.html">Testador XSS</a></li>
         </ul>
       </nav>
     </header>
-
     <main class="container">
-      <form>
+      <form id="uploadForm">
         <label for="urlField">Digite a URL do site:</label>
-        <input
-          type="url"
-          id="urlField"
-          placeholder="Exemplo: https://site.com"
-          required
-        />
-        <button type="button" onclick="handleTest()">Testar</button>
+        <input type="url"id="urlField"placeholder="Exemplo: https://site.com"required/>
+
+        <label for="fileInput">Carregar arquivo de payloads:</label>
+        <input type="file" id="fileInput" accept=".txt" />
+
+        <button type="submit">Testar</button>
       </form>
       <div class="output" id="output"></div>
     </main>
-
     <script src="xss.js"></script>
   </body>
 </html>
