--- a/projeto/xss-tester/xss.html
+++ b/projeto/xss-tester/xss.html
@@ -21,8 +21,13 @@
     <main class="container">
       <form id="uploadForm">
         <label for="urlField">Digite a URL do site:</label>
-        <input type="url"id="urlField"placeholder="Exemplo: https://site.com"required/>
-
+        <input
+          type="url"
+          id="urlField"
+          placeholder="Exemplo: https://site.com"
+          required
+        />
+        <!--i dont know how to fix this bug on the input, every time i try to fix it just come back, so i give up-->
         <label for="fileInput">Carregar arquivo de payloads:</label>
         <input type="file" id="fileInput" accept=".txt" />
 
