--- a/projeto/cf-finder/cf-cookies-finder.html
+++ b/projeto/cf-finder/cf-cookies-finder.html
@@ -18,7 +18,7 @@
     </header>
     <div class="container">
       <form>
-        <input type="text" id="site" placeholder="Type here..." />
+        <input type="text" id="site" placeholder="url" />
         <button type="button" onclick="validate_site()">Submit</button>
       </form>
       <div class="output" id="output" placeholder="output"></div>
