--- a/projeto/cf-finder/jwt-cookie-finder.html
+++ b/projeto/cf-finder/jwt-cookie-finder.html
@@ -11,7 +11,7 @@
       <nav>
         <ul class="nav_list">
           <li><a href="../dorkr/dorkr.html">Dork Test</a></li>
-          <li><a href="./cf-cookies-finder.html">Cloudflare Cookies</a></li>
+          <li><a href="./jwt-cookie-finder.html">jwt Cookies</a></li>
           <li><a href="../xss-tester/xss.html">xss tester</a></li>
         </ul>
       </nav>
@@ -23,6 +23,6 @@
       </form>
       <div class="output" id="output" placeholder="output"></div>
     </div>
-    <script src="requisição.js"></script>
+    <script src="requisicao.js"></script>
   </body>
 </html>
