--- a/projeto/cf-finder/jwt-cookie-finder.html
+++ b/projeto/cf-finder/jwt-cookie-finder.html
@@ -11,17 +11,17 @@
       <nav>
         <ul class="nav_list">
           <li><a href="../dorkr/dorkr.html">Dork Test</a></li>
-          <li><a href="./jwt-cookie-finder.html">jwt Cookies</a></li>
-          <li><a href="../xss-tester/xss.html">xss tester</a></li>
+          <li><a href="./jwt-cookie-finder.html">JWT Cookies</a></li>
+          <li><a href="../xss-tester/xss.html">XSS Tester</a></li>
         </ul>
       </nav>
     </header>
     <div class="container">
       <form>
-        <input type="text" id="site" placeholder="url" />
-        <button type="button" onclick="validate_site()">Submit</button>
+        <input type="text" id="site" placeholder="URL" />
+        <button type="button" onclick="ping_site()">Submit</button>
       </form>
-      <div class="output" id="output" placeholder="output"></div>
+      <div class="output" id="output"></div>
     </div>
     <script src="requisicao.js"></script>
   </body>
