--- a/projeto/cf-finder/cf-cookie-finder.html
+++ b/projeto/cf-finder/cf-cookie-finder.html
@@ -11,7 +11,7 @@
       <nav>
         <ul class="nav_list">
           <li><a href="../dorkr/dorkr.html">Dork Test</a></li>
-          <li><a href="./jwt-cookie-finder.html">JWT Cookies</a></li>
+          <li><a href="./cf-cookie-finder.html">JWT Cookies</a></li>
           <li><a href="../xss-tester/xss.html">XSS Tester</a></li>
         </ul>
       </nav>
