--- a/projeto/cf-finder/cf-cookie-finder.html
+++ b/projeto/cf-finder/cf-cookie-finder.html
@@ -1,28 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>by pepeeino</title>
-    <link rel="stylesheet" href="index.css" />
-  </head>
-  <body>
-    <header>
-      <nav>
-        <ul class="nav_list">
-          <li><a href="../dorkr/dorkr.html">Dork Test</a></li>
-          <li><a href="./cf-cookie-finder.html">JWT Cookies</a></li>
-          <li><a href="../xss-tester/xss.html">XSS Tester</a></li>
-        </ul>
-      </nav>
-    </header>
-    <div class="container">
-      <form>
-        <input type="text" id="site" placeholder="URL" />
-        <button type="button" onclick="ping_site()">Submit</button>
-      </form>
-      <div class="output" id="output"></div>
-    </div>
-    <script src="requisicao.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>by pepeeino</title>
+  <link rel="stylesheet" href="index.css" />
+</head>
+
+<body>
+  <header>
+    <nav>
+      <ul class="nav_list">
+        <li><a href="../dorkr/dorkr.html">Dork Test</a></li>
+        <li><a href="./cf-cookie-finder.html">JWT Cookies</a></li>
+        <li><a href="../xss/xss.html">XSS Tester</a></li>
+      </ul>
+    </nav>
+  </header>
+  <div class="container">
+    <form>
+      <input type="text" id="site" placeholder="URL" />
+      <button type="button" onclick="ping_site()">Submit</button>
+    </form>
+    <div class="output" id="output"></div>
+  </div>
+  <script src="requisicao.js"></script>
+</body>
+
 </html>
