--- a/projeto/dorkr/dorkr.html
+++ b/projeto/dorkr/dorkr.html
@@ -1,33 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>by pepeeino</title>
-    <link rel="stylesheet" href="dorkr.css" />
-  </head>
-  <body>
-    <header>
-      <nav>
-        <ul class="nav_list">
-          <li><a href="./dorkr.html">Dork Test</a></li>
-          <li><a href="../cf-finder/cf-cookie-finder.html">Cloudflare Cookies</a></li>
-        <li><a href="../xss-tester/xss.html">xss tester</a></li>
-        </ul>
-      </nav>
-    </header>
 
-    <div class="container">
-      <form>
-        <label for="dorkInput">Digite o Dork ou selecione um arquivo</label>
-        <input type="text" id="dorkInput" placeholder="Digite o dork..." />
-        <input type="file" id="fileInput" accept=".txt" />
-        <button type="button" onclick="processInput()">Testar</button>
-      </form>
-      <div class="output" id="output"></div>
-    </div>
-    <button id="downloadBtn" style="display: none" onclick="downloadResults()">Baixar Resultados</button>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>by pepeeino</title>
+  <link rel="stylesheet" href="dorkr.css" />
+</head>
+
+<body>
+  <header>
+    <nav>
+      <ul class="nav_list">
+        <li><a href="./dorkr.html">Dork Test</a></li>
+        <li><a href="../cf-finder/cf-cookie-finder.html">Cloudflare Cookies</a></li>
+        <li><a href="../xss/xss.html">xss tester</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <div class="container">
+    <form>
+      <label for="dorkInput">Digite o Dork ou selecione um arquivo</label>
+      <input type="text" id="dorkInput" placeholder="Digite o dork..." />
+      <input type="file" id="fileInput" accept=".txt" />
+      <button type="button" onclick="processInput()">Testar</button>
+    </form>
+    <div class="output" id="output"></div>
   </div>
-    <script src="dorkr.js"></script>
-  </body>
+  <button id="downloadBtn" style="display: none" onclick="downloadResults()">Baixar Resultados</button>
+  </div>
+  <script src="dorkr.js"></script>
+</body>
+
 </html>
