--- a/estudos/estudo_de_php/index.html
+++ b/estudos/estudo_de_php/index.html
@@ -17,7 +17,7 @@
 
         <button type="submit">Cadastrar</button>
     </form>
-    <a href="index.php">Voltar para a lista</a>
+    <a href="index.html">Voltar para a lista</a>
 </body>
 
 </html>
